--- a/docs/.htaccess
+++ b/docs/.htaccess
@@ -1,73 +1,91 @@
+# Gzip
+
+<IfModule mod_mime.c>
+
+    AddType text/javascript                js
+
+    AddType application/vnd.ms-fontobject  eot
+
+    AddType font/ttf                       ttf
+
+    AddType font/otf                       otf
+
+    AddType font/x-woff                    woff
+
+    AddType image/svg+xml                  svg 
+
+    AddType image/svg+xml                  svgz
+
+    AddEncoding gzip                       svgz
+
+</Ifmodule>
+
+# Ablaufzeiten festlegen
+
 <IfModule mod_expires.c>
 
     ExpiresActive on
-    ExpiresDefault                                      "access plus 1 month"
 
-  # CSS
-    ExpiresByType text/css                              "access plus 1 month”
+    ExpiresDefault "access plus 5 minutes"
 
-  # Data interchange
-    ExpiresByType application/atom+xml                  "access plus 1 hour"
-    ExpiresByType application/rdf+xml                   "access plus 1 hour"
-    ExpiresByType application/rss+xml                   "access plus 1 hour"
+    ExpiresByType image/ico "access plus 1 year"
 
-    ExpiresByType application/json                      "access plus 0 seconds"
-    ExpiresByType application/ld+json                   "access plus 0 seconds"
-    ExpiresByType application/schema+json               "access plus 0 seconds"
-    ExpiresByType application/vnd.geo+json              "access plus 0 seconds"
-    ExpiresByType application/xml                       "access plus 0 seconds"
-    ExpiresByType text/xml                              "access plus 0 seconds"
+    ExpiresByType image/jpg "access plus 1 month"
 
-  # Favicon (cannot be renamed!) and cursor images
-    ExpiresByType image/vnd.microsoft.icon              "access plus 1 week"
-    ExpiresByType image/x-icon                          "access plus 1 week"
+    ExpiresByType image/jpeg "access plus 1 month"
 
-  # HTML
-    ExpiresByType text/html                             "access plus 2 day”
+    ExpiresByType image/gif "access plus 1 month"
 
-  # JavaScript
-    ExpiresByType application/javascript                "access plus 1 month”
-    ExpiresByType application/x-javascript              "access plus 1 month"
-    ExpiresByType text/javascript                       "access plus 1 month"
+    ExpiresByType image/png "access plus 1 month"
 
-  # Manifest files
-    ExpiresByType application/manifest+json             "access plus 1 month"
+    ExpiresByType application/vnd.ms-fontobject "access plus 1 month"
 
-    ExpiresByType application/x-web-app-manifest+json   "access plus 0 seconds"
-    ExpiresByType text/cache-manifest                   "access plus 0 seconds"
+    ExpiresByType font/ttf "access plus 1 month"
 
-  # Media files
-    ExpiresByType audio/ogg                             "access plus 1 month"
-    ExpiresByType image/bmp                             "access plus 1 month"
-    ExpiresByType image/gif                             "access plus 1 month"
-    ExpiresByType image/jpeg                            "access plus 1 month"
-    ExpiresByType image/png                             "access plus 1 month"
-    ExpiresByType image/svg+xml                         "access plus 1 month"
-    ExpiresByType video/mp4                             "access plus 1 month"
-    ExpiresByType video/ogg                             "access plus 1 month"
-    ExpiresByType video/webm                            "access plus 1 month"
+    ExpiresByType font/otf "access plus 1 month"
 
-  # Web fonts
+    ExpiresByType font/x-woff "access plus 1 month"
 
-    # Embedded OpenType (EOT)
-    ExpiresByType application/vnd.ms-fontobject         "access plus 1 month"
-    ExpiresByType font/eot                              "access plus 1 month"
+    ExpiresByType image/svg+xml "access plus 1 month"
 
-    # OpenType
-    ExpiresByType font/opentype                         "access plus 1 month"
+    ExpiresByType application/x-shockwave-flash "access plus 1 month"
 
-    # TrueType
-    ExpiresByType application/x-font-ttf                "access plus 1 month"
+    ExpiresByType text/html "access plus 4 hours"
 
-    # Web Open Font Format (WOFF) 1.0
-    ExpiresByType application/font-woff                 "access plus 1 month"
-    ExpiresByType application/x-font-woff               "access plus 1 month"
-    ExpiresByType font/woff                             "access plus 1 month"
+    ExpiresByType text/htm "access plus 4 hours"
 
-    # Web Open Font Format (WOFF) 2.0
-    ExpiresByType application/font-woff2                "access plus 1 month"
+    ExpiresByType text/javascript "access plus 7 days"
 
-  # Other
-    ExpiresByType text/x-cross-domain-policy            "access plus 1 week"
+    ExpiresByType text/css "access plus 7 days"
+
+    ExpiresByType text/xml "access plus 7 days"
+
+    ExpiresByType application/xml "access plus 0 seconds"
+
+    ExpiresByType application/json "access plus 0 seconds"
+
+    ExpiresByType text/cache-manifest "access plus 0 seconds"
+
+</IfModule>
+
+# Kompriierung aktivieren
+
+<IfModule mod_headers.c>
+
+    AddOutputFilterByType DEFLATE text/plain text/html text/xml text/css text/javascript
+
+    AddOutputFilterByType DEFLATE application/xml
+
+    AddOutputFilterByType DEFLATE application/rss+xml
+
+    AddOutputFilterByType DEFLATE application/javascript application/x-javascript
+
+    AddOutputFilterByType DEFLATE image/svg+xml
+
+# Ausnahmen
+
+    BrowserMatch ^Mozilla/4\.0[678] no-gzip
+
+    BrowserMatch \bMSIE\s7 !no-gzip !gzip-only-text/html
 
 </IfModule>
